issue:7897 fixed - Menu widget submenu alignment

--- a/app/design/frontend/Magento/blank/web/css/source/_navigation.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_navigation.less
@@ -310,3 +310,11 @@
         }
     }
 }
+
+.navigation{
+        ul, ol{
+                >li{
+            position: relative;
+        }
+    }
+}
